[package]
name = "async-pidfd"
version = "0.1.4"
authors = ["Josh Triplett <josh@joshtriplett.org>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshtriplett/async-pidfd"
description = "Process file descriptors (pidfd) for Linux"
readme = "README.md"
keywords = ["process", "file-descriptor", "wait", "future", "futures"]
categories = ["api-bindings", "asynchronous", "os::unix-apis"]

[features]
# By default, async-pidfd provides async support; however, if you only want
# synchronous pidfd support, you can disable the async feature.
default = ["async"]
async = ["async-io"]

[dependencies]
async-io = { version = "2.4", optional = true }
libc = "0.2.172"

[dev-dependencies]
futures-lite = "2.6"

[lints.rust]
non_ascii_idents = "deny"
unfulfilled_lint_expectations = "deny"
unit_bindings = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_qualifications = "deny"

[lints.clippy]
allow_attributes = "deny"
char_lit_as_u8 = "deny"
ignored_unit_patterns = "deny"
manual_is_variant_and = "deny"
manual_let_else = "deny"
needless_borrow = "deny"
needless_borrowed_reference = "allow"
needless_question_mark = "allow"
needless_raw_string_hashes = "deny"
needless_raw_strings = "deny"
non_ascii_literal = "deny"
ptr_as_ptr = "deny"
should_panic_without_expect = "deny"
string_to_string = "deny"
uninlined_format_args = "deny"
unnecessary_cast = "deny"
